--- a/apps/text-contrast/src/public/index.css
+++ b/apps/text-contrast/src/public/index.css
@@ -8,6 +8,17 @@ html, body {
     display: flex;
 }
 
+button {
+    border: none;
+    border-radius: 2px;
+    padding: 8px 15px;
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
 #content-container {
     margin: auto;
     width: fit-content;
@@ -32,6 +43,15 @@ html, body {
 #test-block, #ai-guess-block {
     display: flex;
     text-align: center;
+    border-radius: 2px;
+}
+
+.dark-text {
+    color: black;
+}
+
+.light-text {
+    color: white;
 }
 
 .column, .row {
@@ -40,6 +60,10 @@ html, body {
 
 .column {
     flex-direction: column;
+}
+
+.justify-between {
+    justify-content: space-between;
 }
 
 .mr-8px {
